[package]
name = "cygrind-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
draw2d = []
draw3d = []
full = ["draw2d", "draw3d"]
default = []

[dependencies]
wgpu = { git = "https://github.com/gfx-rs/wgpu.git", features = ["webgl"] }
logos = "0.12.0"
flo_curves = "0.6.0"
winit = "0.26.1"
criterion = "0.3.5"

[target.wasm32-unknown-emscripten.dependencies]
skia-safe = { version = "0.47.0", features = ["gl"] }

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "draw2d"
harness = false
