[package]
name = "cygrind-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
draw2d = ["dep:skia-safe"]
full = ["draw2d"]
default = []

[dependencies]
logos = "0.12.0"
flo_curves = "0.6.0"
skia-safe = { version = "0.47.0", features = ["gl"], optional = true }

[dev-dependencies]
criterion = "0.3.5"

[target.wasm32-unknown-emscripten.dependencies]
skia-safe = { version = "0.47.0", features = ["gl"] }

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "draw2d"
harness = false
